src/modes/read_view/ui/custom_widgets/snapshots/render_second_zone_should_render_consistently_when_long_body_is_provided.snap
---
source: src/modes/read_view/ui/custom_widgets/tweet_widget.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 1 },
    content: [
        "THIS IS A SUPER VERY LONG ...more info  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 255, 255), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
