src/modes/read_view/ui/custom_widgets/snapshots/render_widget_should_render_consistently_on_large_screens_liked_true_retweeted_true.snap
---
source: src/modes/read_view/ui/custom_widgets/tweet_widget.rs
expression: terminal.backend()
---
"test_name test_handle                   "
"THIS IS A SUPER VERY LONG TEXT AND      "
"CUTTOFF POINT IS INEVITABLE; THIS IS A  "
"SUPER VERY LONG TEXT AND CUTTOFF...more "
"↩100 ●retweeted ♥100                    "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
