src/modes/read_view/ui/custom_widgets/snapshots/render_widget_should_render_consistently_on_medium_screens_liked_false_retweeted_true.snap
---
source: src/modes/read_view/ui/custom_widgets/tweet_widget.rs
expression: terminal.backend()
---
"test_name test_handl"
"THIS IS A SUPER VERY"
"LONG TEXT AND       "
"CUTTOFF POI...more  "
"↩100 ●retweeted ♡100"
"                    "
"                    "
"                    "
"                    "
"                    "
